--- a/security-system/src/main/resources/application.properties
+++ b/security-system/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/security_system
 spring.datasource.username = root
 spring.datasource.password = secret
 spring.jpa.hibernate.ddl-auto = update
+
+# secret key
+jwt.secret.key = thisisthemostsecuresecretkeyusedtocreatetoken
+
+server.servlet.context-path=/api/v1.0
